syntax = "proto3";

package com.github.im.common.connect.model.proto;
option java_package = "com.github.im.group.model.proto";
option java_outer_classname = "Chat";
import "UserInfoProto.proto";

// chat 信息
message ChatMessage  {


  int64 msgId = 1 ;

  string clientMsgId = 4; // client msg Id 配合 sequenceId 用于QOS ACK 使用UUID 即可

  string content  = 3 ;  //消息内容

  int64 conversationId = 9 ;   // 消息对应的会话Id

  string conversationName = 10 ;

  UserInfo fromUser = 2 ;
 // server-client 需要使用 用于指示推送到的客户端
  UserInfo toUser = 8 ;

  int64 clientTimeStamp = 7 ;

  int64 serverTimeStamp = 12 ;

  MessageType type = 6 ; // 消息类型

  MessagesStatus messagesStatus = 11; // 消息状态

  int64 sequenceId = 5 ; // generateBy server



}
/**
 * 消息状态
 */
enum MessagesStatus{

  SENDING = 0 ;  // 正在发送 用于客户端-》 服务端
  SENT = 1 ;   //  已发送 -》 服务端已经接收
  FAILED = 2 ; // 发送失败
  RECEIVED = 3 ;    // 已接收 用于 服务端-》客户端 接收到的状态
  READ = 4 ;   //  已读取  客户端消息回执状态
  UNREAD = 5 ;  // 未读取 客户端消息回执状态
  DELETED = 6 ;  // 删除
  REVOKE = 7 ;  // 撤回

}



/**
*  ACK 应答消息
 */
message AckMessage {
  string clientMsgId = 1;  // 客户端生成的唯一 ID
  int64 serverMsgId = 2;  // 服务端生成的 msgId
  int64 conversationId = 3;
  UserInfo fromUser = 4;  // 谁的消息被确认
  int64 ackTimestamp = 5;  // 确认时间戳 服务端消息时间戳
//  enum AckType {
//    RECEIVED = 0; // 已收到
//    STORED   = 1; // 已存储
//    READ     = 2; // 已读
//  }
//  AckType type = 6;
    MessagesStatus status = 7;
}

enum MessageType{

  TEXT = 0 ;

  FILE = 1 ;

  VIDEO = 3 ;

  IMAGE = 6;

  VOICE = 4 ;



}